# COV-Face-Tracking

./: README.md  pyproject.toml
BasicFaceTracking/: README.md
BasicFaceTracking/SharedContent/Templates/: InstallSDKTemplates.cmd
BasicFaceTracking/SharedContent/Templates/UWPSDKSampleCPP/: UWPSDKSampleCPP.sln  UWPSDKSampleCPP.vcxproj  UWPSDKSampleCPP.vcxproj.filters  UWPSDKSampleCPP.vstemplate
BasicFaceTracking/SharedContent/Templates/UWPSDKSampleCS/: UWPSDKSampleCS.csproj  UWPSDKSampleCS.sln
BasicFaceTracking/SharedContent/Templates/UWPSDKSampleCX/: Package.appxmanifest  SampleConfiguration.cpp  SampleConfiguration.h  Scenario1_ShortName.xaml.cpp  Scenario1_ShortName.xaml.h  Scenario2_ShortName.xaml.cpp  Scenario2_ShortName.xaml.h  UWPSDKSampleCX.sln  UWPSDKSampleCX.vcxproj  UWPSDKSampleCX.vcxproj.filters  (+1 more)
BasicFaceTracking/cppwinrt/: BasicFaceTracking.sln  BasicFaceTracking.vcxproj  BasicFaceTracking.vcxproj.filters  Package.appxmanifest  Project.idl  SampleConfiguration.cpp  SampleConfiguration.h  Scenario1_TrackInWebcam.cpp  Scenario1_TrackInWebcam.h  pch.h
BasicFaceTracking/cs/: BasicFaceTracking.csproj  BasicFaceTracking.sln  Package.appxmanifest  SampleConfiguration.cs  Scenario1_TrackInWebcam.xaml.cs
BasicFaceTracking/shared/: Scenario1_TrackInWebcam.xaml
server/: pyproject.toml
server/docker/: Dockerfile.api  Dockerfile.retinaface
server/face_api/: config.py  main.py  recognition.py
server/face_api/database/: crud.py  database.py  models.py
server/tests_e2e/: test_insightface.py  test_send_image.py  test_set_profile_encoding.py
(+3 files in other folders)
