[tool.poetry]
name = "alhosletmein"
version = "0.1.0"
description = ""
authors = ["Corban Villa <corbanvilla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"
Pillow = "^8.3.2"
opencv-python = "^4.5.3"
SQLAlchemy = "^1.4.25"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
